After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674169 - [PATCH] Settings in wrong path
[PATCH] Settings in wrong path
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: libbrasero-burn
git master
Other Linux
: Normal normal
: ---
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-16 01:24 UTC by Robert Ancell
Modified: 2012-04-30 04:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Put settings in the correct path (1.59 KB, patch)
2012-04-16 01:25 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2012-04-16 01:24:14 UTC
Change schema path to standard format

Plugin settings are in /apps/brasero when they should be in /org/gnome/brasero:
http://mail.gnome.org/archives/desktop-devel-list/2011-February/msg00064.html
Comment 1 Robert Ancell 2012-04-16 01:25:07 UTC
Created attachment 212111 [details] [review]
Put settings in the correct path
Comment 2 Luis Medinas 2012-04-27 10:19:47 UTC
Review of attachment 212111 [details] [review]:

Hi Robert,

the patch is fine please commit to git master.

Thanks!