Put settings in the correct path

https://bugzilla.gnome.org/show_bug.cgi?id=674169